k8s/apps/streaming/mediamanager/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediamanager
  namespace: mediamanager
  labels:
    app.kubernetes.io/name: mediamanager
    app.kubernetes.io/instance: mediamanager
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mediamanager
      app.kubernetes.io/instance: mediamanager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mediamanager
        app.kubernetes.io/instance: mediamanager
    spec:
      serviceAccountName: mediamanager
      containers:
      - name: mediamanager-server
        image: ghcr.io/maxdorninger/mediamanager/mediamanager:1.11.1
        volumeMounts:
          - mountPath: /data
            name: mediamanager-data
          - mountPath: /app/config
            name: mediamanager-config
          - mountPath: /data/images
            name: mediamanager-images
      volumes:
        - name: mediamanager-data
          nfs:
            path: /mnt/MAIN_POOL/data
            server: 192.168.1.244
        - name: mediamanager-config
          persistentVolumeClaim:
            claimName: mediamanager-config
        - name: mediamanager-images
          persistentVolumeClaim:
            claimName: mediamanager-images
