k8s/apps/streaming/mediamanager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mediamanager
  namespace: mediamanager
  labels:
    app.kubernetes.io/name: mediamanager
    app.kubernetes.io/instance: mediamanager
spec:
  selector:
    app.kubernetes.io/name: mediamanager
    app.kubernetes.io/instance: mediamanager
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
