k8s/apps/streaming/mediamanager/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mediamanager
  namespace: mediamanager
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - media.schaermu.ch
  rules:
    - backendRefs:
        - name: mediamanager
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /
